Updated bootstrap customizations for colorful look and fixed log out alignment

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,8 +5,13 @@ $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Ari
 $navbar-height:                                        45px;
 $navbar-default-bg: #3498db;
 $navbar-default-link-color: #1abc9c;
+$navbar-default-link-hover-color: #bdc3c7;
 $brand-primary: #1abc9c;
 $jumbotron-bg: #7f8c8d;
+$btn-danger-bg: #bdc3c7;
+$btn-danger-border: #1abc9c;
+
+
 
 @import 'bootstrap';
 
